# AdventureGPT

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  mise.toml  pyproject.toml
deployment/: Dockerfile  docker-compose.yml
deployment/scripts/: entrypoint.sh  startup.sh
docs/: implementation_report.md  manual.md
requirements/: dev-requirements.txt  requirements.txt
src/adventuregpt/: engine.py  main.py  models.py  storage.py  tui.py
src/backend/: __init__.py  api.py  app.py  config.py  db.py  game_engine.py  middleware.py  models.py  redis.py
src/backend/api/: game.py  handlers.py  routes.py
src/cli/: config.py  menu_ui.py  repl.py
tests/: conftest.py  test_engine.py  test_tui.py
