[project]
name = "adventuregpt"
version = "0.1.0"
description = "A modern CLI text adventure game powered by GenAI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt-toolkit>=3.0.52",
    "textual>=6.11.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]
