[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adventuregpt"
version = "0.1.0"
description = "A modern CLI text adventure game powered by GenAI"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.5",
    "textual>=6.11.0",
    "typer>=0.12.3",
]

[project.scripts]
adventuregpt = "adventuregpt.main:app"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=adventuregpt --cov-report=term-missing"
